# segmentation_api

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  functions.py
ex_1/: clean_query.sql  current_query.sql
ex_2/: eda.ipynb
logs/: training.out
models/: contribution_model_2024-04-18.json  contribution_model_2024-04-18.pkl
src/: train.py
src/utils/: functions.py  models.py
