[tool.poetry]
name = "segmentation_api"
version = "0.1.0"
description = ""
authors = ["papagorgio23 <jason@aisportsfirm.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
